--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Quantica = "ae5ea0c6-3f5e-46a2-bc28-a7c4c7a4773c"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
