--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 
 [compat]
+MakieTeX = "0.0.4"
 julia = "1"
 
 [extras]
